--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-01  Zoran Vasiljevic  <zv@archiware.com>
+
+	* README-nsexample.txt: improved formatting
+	* nsexample.c: rewritten for AS 4.0 release
+	* Makefile: always look for AS in /usr/local/aolserver
+
 2000-08-20  Kriston J. Rehberg  <Kriston@AOL.NET>
 
 	* README-nsexample.txt: Added note about ChangeLog
